--- a/main.ipynb
+++ b/main.ipynb
@@ -16,6 +16,137 @@
     "from dotenv import load_dotenv\n",
     "load_dotenv()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "groq_api_key = os.environ.get(\"GROQ_API_KEY\")\n",
+    "ASTRA_DB_APPLICATION_TOKEN=\"AstraCS:vPfILQUUvrhrHOCfNlosWSdr:fd4cbafe7df8c9af41e18f4bf81648b69da816909cc4b55a27337396ea77d671\" # enter the \"AstraCS:...\" string found in in your Token JSON file\"\n",
+    "ASTRA_DB_ID=\"53aed175-1165-4a25-846d-0bb703c24d70\"\n",
+    "cassio.init(token=ASTRA_DB_APPLICATION_TOKEN,database_id=ASTRA_DB_ID)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_community.document_loaders import WebBaseLoader\n",
+    "import bs4\n",
+    "loader=WebBaseLoader(web_paths=(\"https://lilianweng.github.io/posts/2023-06-23-agent/\",),\n",
+    "                     bs_kwargs=dict(parse_only=bs4.SoupStrainer(\n",
+    "                         class_=(\"post-title\",\"post-content\",\"post-header\")\n",
+    "\n",
+    "                     )))\n",
+    "\n",
+    "text_documents=loader.load()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text_documents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
+    "text_splitter=RecursiveCharacterTextSplitter(chunk_size=1000,chunk_overlap=200)\n",
+    "docs=text_splitter.split_documents(text_documents)\n",
+    "docs[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Convert Data Into Vectors and store in AstraDB\n",
+    "os.environ[\"OPENAI_API_KEY\"] = os.getenv(\"OPENAI_API_KEY\")\n",
+    "embeddings=OpenAIEmbeddings()\n",
+    "astra_vector_store=Cassandra(\n",
+    "    embedding=embeddings,\n",
+    "    table_name=\"qa_mini_demo\",\n",
+    "    session=None,\n",
+    "    keyspace=None\n",
+    "\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llm=ChatGroq(groq_api_key=groq_api_key,\n",
+    "         model_name=\"mixtral-8x7b-32768\")\n",
+    "\n",
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "prompt = ChatPromptTemplate.from_template(\"\"\"\n",
+    "Answer the following question based only on the provided context. \n",
+    "Think step by step before providing a detailed answer. \n",
+    "I will tip you $1000 if the user finds the answer helpful. \n",
+    "<context>\n",
+    "{context}\n",
+    "</context>\n",
+    "\n",
+    "Question: {input}\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "astra_vector_index.query(\"Chain of thought (CoT; Wei et al. 2022) has become a standard prompting technique\",llm=llm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.chains import create_retrieval_chain\n",
+    "from langchain.chains.combine_documents import create_stuff_documents_chain\n",
+    "\n",
+    "retriever=astra_vector_store.as_retriever()\n",
+    "document_chain=create_stuff_documents_chain(llm,prompt)\n",
+    "retrieval_chain=create_retrieval_chain(retriever,document_chain)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response=retrieval_chain.invoke({\"input\":\"Chain of thought (CoT; Wei et al. 2022) has become a standard prompting technique\"})\n",
+    "response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response[\"answer\"]"
+   ]
   }
  ],
  "metadata": {
@@ -25,7 +156,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.13"
   }
  },
